@@ -1,5 +1,9 @@
 Release 1.11 - Current Development
 
+  * Changed default content handler type for "/rmeta" in tika-server
+    to "xml" to align with "-J" option in tika-app.  
+    Clients can now specify handler types via PathParam. (TIKA-1716).
+
   * The fantastic GROBID (or Grobid) GeneRation Of BIbliographic Data
     for machine learning from PDF files is now integrated as a 
     Tika parser (TIKA-1699, TIKA-1712).
@@ -9,7 +13,7 @@ Release 1.11 - Current Development
 
   * Upgraded to ASM 5.0.4 (TIKA-1705).
 
-  * Corrected Tika Config XML detector defintion explicit loading 
+  * Corrected Tika Config XML detector definition explicit loading 
     of MimeTypes (TIKA-1708)
 
   * In Tika Parsers, Batch, Server, App and Examples, use Apache
